@@ -4,6 +4,7 @@
 * Update to boost 1.40
 * Better support of Python extensions
 * Add an icon and version info to the Windows daemon
+* Allow local IPs
 
 -- 2.4 2008-10-02 --
 * Improve Lua scripts
